--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,16 +1,263 @@
-@BOOK{Meier2017,
-  author = {Jane Meier},
-  year = {2017},
-  title = {Language Universals and Linguistic Typology},
-  address = {Oxford},
-  publisher = {Basil Blackwell} 
+@article{Barik1971,
+	author = {Barik, Henri C.},
+	title={A description of various types of omissions, additions, and errors of translation encountered in simultaneous interpretation},
+	journal={Meta},
+	volume={16},
+	number={4}, 
+	pages={199--210},
+	year = {1971}
 }
 
-@BOOK{Chomsky1957,
-  author = {Noam Chomsky},
-  year = {1957},
-  title = {Syntactic structures},
-  address = {The Hague},
-  publisher = {Mouton} 
+@article{Bartłomiejczyk2006,
+	journal = {Interpreting},
+	author = {Bartłomiejczyk, Magdalena},
+	volume={8},
+	number={2},
+	pages = {149--174},
+	title = {Strategies of simultaneous interpreting and directionality},
+	year = {2006}
 }
 
+
+@mastersthersis{Biagini2015,
+	title = {Glossario cartaceo e glossario elettronico durante l'interpretazione simultanea: uno studio comparativo},
+	author = {Biagini, Giulio},
+	school = {Università di Trieste},
+	year = {2015}
+}
+
+
+@misc{Costa2016,
+	author = {Costa, H. and Pastor, G. C. and Durán Munoz, I},
+	title = {An Interpreters’ Guide to Selecting Terminology Management Tools},
+	year = {2016}
+}
+
+
+@mastersthesis{De2013,
+	address = {L’uso di {InterpretBank} per la preparazione di una conferenza sul trattamento delle acque reflue: glossario terminologico e contributo sperimentale},
+	author = {De Merulis, Gianpiero},
+	school = {Università di Bologna},
+	year = {2013}
+}
+
+
+@article{Fantinuoli2017a,
+	author = {Fantinuoli, Claudio},
+	journal = {Translation \& Interpreting}, 
+	Volume={9}, 
+	Number={2},
+	title = {Computer-assisted preparation in conference interpreting},
+	year = {2017}
+}
+
+
+@incollection{Fantinuoli2017b,
+	author = {Fantinuoli, Claudio},
+	title = {Speech recognition in the interpreter workstation},
+	booktitle={Proceedings of the Translating and the Computer 39 Conference in {London}},
+	address={London},
+	year = {2017}
+}
+
+@incollection{Fantinuoli2018,
+	author = {Fantinuoli, Claudio},	
+	title = {Computer-assisted interpreting: challenges and future perspectives},
+	editor={Isabel Durán and Gloria Corpas},
+	booktitle={Trends in e-tools and resources for translators and interpreters},
+	pages={153--174},
+	address={Leiden},
+	publisher={Brill}
+		
+}
+
+@mastersthesis{Gacek2015,
+	author = {Gacek, Michael},
+	title = {Softwarelösungen für {DolmetscherI}nnen},
+	school={University of Vienna},
+	year = {2015}
+}
+
+
+@article{Gile1988,
+	author = {Gile, Daniel},
+	journal = {The Interpreters' Newsletter},
+	pages = {4--22},
+	title = {Le partage de l'attention et le ‘modèle d'effort’ en interprétation simultanée},
+	volume = {1},
+	year = {1988}
+}
+
+@book{Gile1995,
+	address = {Amsterdam/Philadelphia},
+	author = {Gile, Daniel},
+	publisher = {John Benjamins},
+	title = {Basic concepts and models for interpreter and translator training},
+	year = {1995}
+}
+
+
+@incollection{Gile1997,
+	author={Gile, Daniel},
+	year={1997},
+	title={Conference interpreting as a cognitive management problem},
+	editor={Joseph H. Danks and Gregory M. Shreve and Stephen B. Fountain and Michael McBeath},
+	booktitle={Cognitive Processes in Translation and Interpretation},
+	publisher={Sage}, 
+	address={London}, 
+	pages={196--214}
+}
+
+@article{Gile1999,
+	author = {Gile, Daniel},
+	title = {Testing the Effort Models’ tightrope hypothesis in simultaneous interpreting -- {{A}} contribution},
+	journal={Hermes -- Journal of Linguistics},
+	volume={23},
+	year = {1999}
+}
+
+
+@book{Kahneman1973,
+	author = {Kahneman, Daniel},
+	title = {Attention and Effort},
+	publisher={Prentice-Hall}, 
+	address={Englewood Cliffs, {NJ}},
+	year = {1973}
+}
+
+
+@article{Kantowitz1976,
+	author = {Kantowitz, B. H. and Knight, J. L},
+	pages = {343--362},
+	title = {Testing tapping timesharing: 1 Auditory secondary task},
+	journal={Acta Psychologica},
+	volume = {40},
+	year = {1976}
+}
+
+@mastersthesis{Prandi2015a,
+	title = {L'uso di {InterpretBank} nella didattica dell'interpretazione: uno studio esplorativo},
+	author = {Prandi, Bianca},
+	school = {Università di Bologna},
+	year = {2015}
+}
+
+
+@incollection{Prandi2015b,
+	title = {The use of {CAI} tools in interpreters’ training: a pilot study},
+	author = {Prandi, Bianca},
+	booktitle = {Proceedings of the Translating and the Computer 37 Conference},
+	address = {London},
+	year = {2015}
+}
+
+@misc{Prandi2016,
+	author = {Prandi, Bianca},
+	title = {Analysis of the impact of {CAI} tools on simultaneous interpreting with a focus on cognitive processes and terminology consistency. {P}oster presented at {TRA\&CO} Symposium, {Johannes Gutenberg University Mainz/Germersheim}},
+	year = {2016}
+}
+
+@misc{Prandi2017a,
+	author = {Prandi, Bianca},
+	title = {Investigating cognitive load in simultaneous interpreting with the support of terminology management tools. {P}oster presented at 5\textsuperscript{th} {P}olish Eye Tracking Conference, {Lublin}},
+	year = {2017}
+}
+
+@misc{Prandi2017b,
+	author = {Prandi, Bianca},
+	title = {Designing a Multimethod Study on the Use of {CAI} Tools during Simultaneous Interpreting},
+	booktitle={Proceedings of the Translating and the Computer 39 Conference in {London}},
+	address={London},
+	year = {2017}
+}
+
+@book{Rütten2007,
+	address = {Frankfurt am Main},
+	author = {Rütten, A.},
+	publisher = {Peter Lang},
+	title = {{Informations- und Wissensmanagement im Konferenzdolmetschen}},
+	year = {2007}
+}
+
+
+@incollection{Seeber2007,
+	author={Seeber, Kilian G.},
+	year={2007},
+	title={Thinking outside the cube: {M}odelling language processing tasks in a multiple resource paradigm},
+	booktitle={Interspeech 2007}, 
+	address={Antwerp}, 
+	pages={1382--1385},
+}
+
+@article{Seeber2011,
+	author = {Seeber, Kilian G. and Dirk Kerzel},
+	journal = {Special issue of the International Journal of Bilingualism},
+	number = {2},
+	pages = {228--242},
+	title = {Cognitive load in simultaneous interpreting: {{M}}odel meets data},
+	volume = {16},
+	year = {2011}
+}
+
+@book{Wadensjö1998,
+	author = {Wadensjö, C},
+	title = {Interpreting as interaction},
+	address={London/New York},
+	publisher={Longman},
+	year = {1998}
+}
+
+
+@article{Wickens1976,
+	author = {Wickens, C. D},
+	title = {The effects of divided attention on information processing in tracking}, 
+	journal={Journal of Experimental Psychology: Human Perception and Performance},
+	pages = {1--13},
+	volume = {2},
+	year = {1976}
+}
+
+@incollection{Wickens1984,
+	author={Wickens, Christopher D.},
+	year={1984},
+	title={Processing resources in attention},
+	editor={Raja Parasuraman and David R. Davies},
+	booktitle = {Varieties of attention},
+	publisher={Academic Press},
+	address={New York}, 
+	pages={63--102}
+}	
+
+@article{Wickens2002,
+	author={Wickens, Christopher D.},
+	year={2002},
+	title={Multiple resources and performance prediction},
+	journal={Theoretical issues in ergonomics science}, 
+	volume={3},
+	number={2}, 
+	pages={159--177}
+}	
+
+@misc{Will2009,
+	author = {Will, M},
+	title = {{Dolmetschorientierte Terminologiearbeit. Modell und Methode}},
+	publisher={Gunter Narr Verlag},
+	year = {2009}
+}
+
+@article{Will2015,
+	author = {Will, Martin},
+	journal = {Trans-Kom},
+	number = {1},
+	pages = {179--201},
+	title = {{Zur Eignung simultanfähiger Terminologiesysteme für das Konferenzdolmetschen}},
+	volume = {8},
+	year = {2015}
+}
+
+@phdthesis{Xu2015,
+	author = {Xu, Ran},
+	title = {Terminology Preparation for Simultaneous Interpreters},
+	school={University of Leeds},
+	year = {2015}
+}
