--- a/localcommands.tex
+++ b/localcommands.tex
@@ -3,3 +3,6 @@
 \makeatletter
 \def\blx@maxline{77}
 \makeatother
+
+%Commands from Conversion, to be deleted before publication
+\newcommand{\textstyleannotationreference}{}
