--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,8 @@
 	        ,collection
 	        ,collectionchapter
 		,colorlinks,citecolor=brown
-% 		,draft,draftmode
+% 		,draft
+                ,draftmode
 		,showindex
 	      % ,multiauthors
 	      % ,nobabel
@@ -62,8 +63,10 @@
  
   
 \includepaper{chapters/01} %add a percentage sign in front of the line to exclude this chapter from book
-\includepaper{chapters/02} 
+ \includepaper{chapters/02} 
 % \includepaper{chapters/03} 
+% \includepaper{chapters/04}
+% \includepaper{chapters/05}
 % copy the lines above and adapt as necessary
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
