all chapters compile

--- a/localpackages.tex
+++ b/localpackages.tex
@@ -18,3 +18,18 @@
 %% if you want the source line of examples to be in italics, uncomment the following line
 % \def\exfont{\it}
 
+\usepackage{hhline}
+\usepackage{tabularx}
+
+%compatibility of pgfplots and forest, see http://tex.stackexchange.com/a/330076
+\makeatletter
+\let\pgfmathModX=\pgfmathMod@
+\usepackage{pgfplots}%
+\let\pgfmathMod@=\pgfmathModX
+\makeatother
+
+\usepackage{siunitx}
+\sisetup{output-decimal-marker={.},detect-weight=true, detect-family=true, detect-all, input-symbols={\%}, free-standing-units, input-open-uncertainty= , input-close-uncertainty= ,table-align-text-pre=false,uncertainty-separator={\,},group-digits=false,detect-inline-weight=math}
+\DeclareSIUnit[number-unit-product={}]{\percent}{\%}
+\makeatletter \def\new@fontshape{} \makeatother
+\robustify\bfseries % For detect weight to work
