Added Bibliography entries and fixed citations for chapter01

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -261,3 +261,209 @@
 	school={University of Leeds},
 	year = {2015}
 }
+
+@article{Alessandrini1990,
+	author 		= {Alessandrini, M},
+	journal 	= {The Interpreters’ Newsletter},
+	pages 		= {77--80},
+	title 		= {Translating Numbers in Consecutive Interpretation: {{A}}n Experimental Study},
+	volume		= {3},
+	year 		= {1990}
+}
+
+@article{Braun1996,
+	author 		= {Braun, S.,  and  Clarici, A},
+	journal 	= {The Interpreters’ Newsletter},
+	pages 		= {85--102},
+	title 		= {Inaccuracy for Numerals in Simultaneous Interpretation: {{N}}eurolinguistic and Neuropsychological Perspectives},
+	volume 		= {7},
+	year 		= {1996}
+}
+
+@book{Collard2017,
+  	author      = {Collard, C. and Defrancq, B.},
+  	location    = {Geneva},
+  	title       = {Sex Differences in Simultaneous Interpreting: {A} Corpus-Based Study},
+  	year        = {2017},
+}
+
+@techreport{CorpasPastor2016,
+  	author 		= {Corpas Pastor, G. and Fern, L.},
+  	title 		= {A Survey of Interpreters’ Needs and Practices Related to Language Technology},
+  	numbers 	= {FFI2012-38881-MINECO/TI-DT-2016-1},
+  	institution = {University of Málaga},
+  	address 	= {Málaga},
+  	year 		= {2016}
+}
+
+@incollection{incollection,
+  author       = {Costa, H., Corpas Pastor, G., & Durán-Muñoz, I. }, 
+  title        = {Assessing Terminology Management Systems for Interpreters},
+  booktitle    = {Trends in E-Tools and Resources for Translators and Interpreters},
+  publisher    = {Brill},
+  year         = {2018},
+  editor       = {Corpas Pastor, G. and Durán-Muñoz, I.},
+  pages        = {57--84},
+  address      = {Leiden},
+}
+
+@book{Council2001,
+	address 	= {Cambridge, U.K.},
+	author 		= {Council of Europe},
+	publisher 	= {Press Syndicate of the University of Cambridge},
+	title 		= {Common {European} Framework of Reference for Languages: {{L}}earning, Teaching, Assessment},
+	year 		= {2001}
+}
+
+
+@phdthesis{Fantinuoli2012,
+	address 	= {Mainz},
+	author 		= {Fantinuoli, C.},
+	publisher 	= {University of Mainz},
+	title 		= {Design and Implementation of a Terminology and Knowledge Management Software for Conference Interpreter},
+	year 		= {2012}
+}
+
+@book{Gile2009,
+	address 	= {Amsterdam},
+	author 		= {Gile, D.},
+	publisher 	= {Benjamins},
+	title 		= {Basic Concepts and Models in Translator and Interpreter Training},
+	year 		= {2009}
+}
+
+
+@article{Goldsmith2017,
+	author 		= {Goldsmith, J},
+	journal 	= {Proceedings of Translating and the Computer},
+	pages 		= {40--50},
+	title 		= {A Comparative User Evaluation of Tablets and Tools for Consecutive Interpreters},
+	volume 		= {39},
+	year 		= {2017}
+}
+
+
+@book{Jones2002,
+	address 	= {Abingdon/New York},
+	author 		= {Jones, R.},
+	publisher 	= {Routledge},
+	title 		= {Conference Interpreting Explained},
+	year 		= {2002}
+}
+
+
+@phdthesis{Korpal2016,
+	address 	= {Poznan},
+	author 		= {Korpal, P.},
+	publisher 	= {Adam Mickiewicz University},
+	title 		= {Linguistic and Psychological Indicators of Stress in Simultaneous Interpreting},
+	year 		= {2016}
+}
+
+
+@article{Lamberger-Felber2001,
+	author 		= {Lamberger-Felber, H.},
+	journal 	= {Hermes},
+	pages 		= {39--63},
+	title 		= {Text-Oriented Research into Interpreting: {{{E}}}xamples from a Case-Study},
+	volume 		= {26},
+	year 		= {2001}
+}
+
+
+@article{Mazza2001,
+	author 		= {Mazza, C},
+	journal 	= {The Interpreters’ Newsletter},
+	pages 		= {87--104},
+	title 		= {Numbers in Simultaneous Interpretation},
+	volume 		= {11},
+	year 		= {2001}
+}
+
+
+@article{Orlando2014,
+	author 		= {Orlando, M},
+	journal 	= {Translation and Interpreting},
+	number 		= {2},
+	pages 		= {39--54},
+	title 		= {A Study on the Amenability of Digital Pen Technology in a Hybrid Mode of Interpreting: {{C}}onsec-Simul with Notes},
+	volume 		= {6},
+	year 		= {2014}
+}
+
+
+@book{Orlando2016,
+	address 	= {Berlin},
+	author 		= {Orlando, M.},
+	publisher 	= {Timme},
+	title 		= {Training 21st Century Translators and Interpreters: {{A}}t the Crossroads of Practice, Research and Pedagogy},
+	year 		= {2016}
+}
+
+
+@article{Pinochi2009,
+	author 		= {Pinochi, D},
+	journal 	= {The Interpreters’ Newsletter},
+	pages 		= {33--57},
+	title 		= {Simultaneous Interpretation of Numbers: {{C}}omparing German and English to Italian. {{A}}n Experimental Study},
+	volume 		= {14},
+	year 		= {2009}
+}
+
+
+@incollection{Mead2015,
+	address 	= {Abingdon/New York},
+	author 		= {Mead, P},
+	booktitle 	= {{Routledge} Encyclopedia of Interpreting Studies},
+	editor 		= {F. Pöchhacker},
+	pages 		= {286--288},
+	publisher 	= {Routledge},
+	title 		= {Numbers},
+	year 		= {2015}
+}
+
+ 
+@incollection{Seeber2015,
+	author 		= {Seeber, K.},
+	title 		= {Simultaneous Interpreting},
+	year		= {2015},
+	editors		= {Mikkelsen, H. and Jourdenais, R.},
+	booktitle	= {The Routledge Handbook of Interpreting},
+	address		= {Oxon/New York}
+	publisher	= {Routledge}
+}
+
+@misc{Seleskovitch1975,
+	author 		= {Seleskovitch, D.},
+	title 		= {Langage, Langue et Mémoire. {{{E}}}tude de la Prise de Notes en Interpretation Consécutive}, 
+	address 	= {Paris},
+	publisher 	= {Minard Lettres Modernes},
+	year 		= {1975}
+}
+
+
+@book{Setton1999,
+	address 	= {Amsterdam},
+	author 		= {Setton, R.},
+	publisher 	= {Benjamins},
+	title 		= {Simultaneous Interpretation. {{A}} Cognitive-Pragmatic Analysis},
+	year 		= {1999}
+}
+
+
+@phdthesis{Timarová2012,
+	address 	= {Antwerp},
+	author 		= {Timarová, S.},
+	publisher 	= {KU Leuven},
+	title 		= {Working Memory in Simultaneous Interpreting},
+	year 		= {2012}
+}
+
+
+@book{Yu2016,
+	address 	= {London},
+	author 		= {Yu, D.,  and  Deng, L.},
+	publisher 	= {Springer},
+	title 		= {Automatic Speech Recognition (Signals an)},
+	year 		= {2016}
+}
