--- a/main.tex
+++ b/main.tex
@@ -11,11 +11,11 @@
 \documentclass[output=book
 		,modfonts
 		,nonflat
-	        ,collection
-	        ,collectionchapter
+	    ,collection
+	    ,collectionchapter
 		,colorlinks,citecolor=brown
 % 		,draft
-                ,draftmode
+        ,draftmode
 		,showindex
 	      % ,multiauthors
 	      % ,nobabel
@@ -62,12 +62,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
   
- \includepaper{chapters/01} %add a percentage sign in front of the line to exclude this chapter from book
- \includepaper{chapters/02} 
- \includepaper{chapters/03} 
- \includepaper{chapters/04}
- \includepaper{chapters/05}
-% copy the lines above and adapt as necessary
+ \includepaper{chapters/01} 
+ %\includepaper{chapters/02} 
+ %\includepaper{chapters/03} 
+ %\includepaper{chapters/04}
+ %\includepaper{chapters/05} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%                                              %%%
