--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,267 +1,3 @@
-@article{Barik1971,
-	author = {Barik, Henri C.},
-	title={A description of various types of omissions, additions, and errors of translation encountered in simultaneous interpretation},
-	journal={Meta},
-	volume={16},
-	number={4}, 
-	pages={199--210},
-	year = {1971}
-}
-
-@article{Bartłomiejczyk2006,
-	journal = {Interpreting},
-	author = {Bartłomiejczyk, Magdalena},
-	volume={8},
-	number={2},
-	pages = {149--174},
-	title = {Strategies of simultaneous interpreting and directionality},
-	year = {2006}
-}
-
-
-@mastersthersis{Biagini2015,
-	title = {Glossario cartaceo e glossario elettronico durante l'interpretazione simultanea: uno studio comparativo},
-	author = {Biagini, Giulio},
-	school = {Università di Trieste},
-	year = {2015}
-}
-
-
-@misc{Costa2016,
-	author = {Costa, H. and Pastor, G. C. and Durán Munoz, I},
-	title = {An Interpreters’ Guide to Selecting Terminology Management Tools},
-	year = {2016}
-}
-
-
-@mastersthesis{De2013,
-	address = {L’uso di {InterpretBank} per la preparazione di una conferenza sul trattamento delle acque reflue: glossario terminologico e contributo sperimentale},
-	author = {De Merulis, Gianpiero},
-	school = {Università di Bologna},
-	year = {2013}
-}
-
-
-@article{Fantinuoli2017a,
-	author = {Fantinuoli, Claudio},
-	journal = {Translation \& Interpreting}, 
-	Volume={9}, 
-	Number={2},
-	title = {Computer-assisted preparation in conference interpreting},
-	year = {2017}
-}
-
-
-@incollection{Fantinuoli2017b,
-	author = {Fantinuoli, Claudio},
-	title = {Speech recognition in the interpreter workstation},
-	booktitle={Proceedings of the Translating and the Computer 39 Conference in {London}},
-	address={London},
-	year = {2017}
-}
-
-@incollection{Fantinuoli2018,
-	author = {Fantinuoli, Claudio},	
-	title = {Computer-assisted interpreting: challenges and future perspectives},
-	editor={Isabel Durán and Gloria Corpas},
-	booktitle={Trends in e-tools and resources for translators and interpreters},
-	pages={153--174},
-	address={Leiden},
-	publisher={Brill}
-		
-}
-
-@mastersthesis{Gacek2015,
-	author = {Gacek, Michael},
-	title = {Softwarelösungen für {DolmetscherI}nnen},
-	school={University of Vienna},
-	year = {2015}
-}
-
-
-@article{Gile1988,
-	author = {Gile, Daniel},
-	journal = {The Interpreters' Newsletter},
-	pages = {4--22},
-	title = {Le partage de l'attention et le ‘modèle d'effort’ en interprétation simultanée},
-	volume = {1},
-	year = {1988}
-}
-
-@book{Gile1995,
-	address = {Amsterdam/Philadelphia},
-	author = {Gile, Daniel},
-	publisher = {John Benjamins},
-	title = {Basic concepts and models for interpreter and translator training},
-	year = {1995}
-}
-
-
-@incollection{Gile1997,
-	author={Gile, Daniel},
-	year={1997},
-	title={Conference interpreting as a cognitive management problem},
-	editor={Joseph H. Danks and Gregory M. Shreve and Stephen B. Fountain and Michael McBeath},
-	booktitle={Cognitive Processes in Translation and Interpretation},
-	publisher={Sage}, 
-	address={London}, 
-	pages={196--214}
-}
-
-@article{Gile1999,
-	author = {Gile, Daniel},
-	title = {Testing the Effort Models’ tightrope hypothesis in simultaneous interpreting -- {{A}} contribution},
-	journal={Hermes -- Journal of Linguistics},
-	volume={23},
-	year = {1999}
-}
-
-
-@book{Kahneman1973,
-	author = {Kahneman, Daniel},
-	title = {Attention and Effort},
-	publisher={Prentice-Hall}, 
-	address={Englewood Cliffs, {NJ}},
-	year = {1973}
-}
-
-
-@article{Kantowitz1976,
-	author = {Kantowitz, B. H. and Knight, J. L},
-	pages = {343--362},
-	title = {Testing tapping timesharing: 1 Auditory secondary task},
-	journal={Acta Psychologica},
-	volume = {40},
-	year = {1976}
-}
-
-@mastersthesis{Prandi2015a,
-	title = {L'uso di {InterpretBank} nella didattica dell'interpretazione: uno studio esplorativo},
-	author = {Prandi, Bianca},
-	school = {Università di Bologna},
-	year = {2015}
-}
-
-
-@incollection{Prandi2015b,
-	title = {The use of {CAI} tools in interpreters’ training: a pilot study},
-	author = {Prandi, Bianca},
-	booktitle = {Proceedings of the Translating and the Computer 37 Conference},
-	address = {London},
-	year = {2015}
-}
-
-@misc{Prandi2016,
-	author = {Prandi, Bianca},
-	title = {Analysis of the impact of {CAI} tools on simultaneous interpreting with a focus on cognitive processes and terminology consistency. {P}oster presented at {TRA\&CO} Symposium, {Johannes Gutenberg University Mainz/Germersheim}},
-	year = {2016}
-}
-
-@misc{Prandi2017a,
-	author = {Prandi, Bianca},
-	title = {Investigating cognitive load in simultaneous interpreting with the support of terminology management tools. {P}oster presented at 5\textsuperscript{th} {P}olish Eye Tracking Conference, {Lublin}},
-	year = {2017}
-}
-
-@misc{Prandi2017b,
-	author = {Prandi, Bianca},
-	title = {Designing a Multimethod Study on the Use of {CAI} Tools during Simultaneous Interpreting},
-	booktitle={Proceedings of the Translating and the Computer 39 Conference in {London}},
-	address={London},
-	year = {2017}
-}
-
-@book{Rütten2007,
-	address = {Frankfurt am Main},
-	author = {Rütten, A.},
-	publisher = {Peter Lang},
-	title = {{Informations- und Wissensmanagement im Konferenzdolmetschen}},
-	year = {2007}
-}
-
-
-@incollection{Seeber2007,
-	author={Seeber, Kilian G.},
-	year={2007},
-	title={Thinking outside the cube: {M}odelling language processing tasks in a multiple resource paradigm},
-	booktitle={Interspeech 2007}, 
-	address={Antwerp}, 
-	pages={1382--1385},
-}
-
-@article{Seeber2011,
-	author = {Seeber, Kilian G. and Dirk Kerzel},
-	journal = {Special issue of the International Journal of Bilingualism},
-	number = {2},
-	pages = {228--242},
-	title = {Cognitive load in simultaneous interpreting: {{M}}odel meets data},
-	volume = {16},
-	year = {2011}
-}
-
-@book{Wadensjö1998,
-	author = {Wadensjö, C},
-	title = {Interpreting as interaction},
-	address={London/New York},
-	publisher={Longman},
-	year = {1998}
-}
-
-
-@article{Wickens1976,
-	author = {Wickens, C. D},
-	title = {The effects of divided attention on information processing in tracking}, 
-	journal={Journal of Experimental Psychology: Human Perception and Performance},
-	pages = {1--13},
-	volume = {2},
-	year = {1976}
-}
-
-@incollection{Wickens1984,
-	author={Wickens, Christopher D.},
-	year={1984},
-	title={Processing resources in attention},
-	editor={Raja Parasuraman and David R. Davies},
-	booktitle = {Varieties of attention},
-	publisher={Academic Press},
-	address={New York}, 
-	pages={63--102}
-}	
-
-@article{Wickens2002,
-	author={Wickens, Christopher D.},
-	year={2002},
-	title={Multiple resources and performance prediction},
-	journal={Theoretical issues in ergonomics science}, 
-	volume={3},
-	number={2}, 
-	pages={159--177}
-}	
-
-@misc{Will2009,
-	author = {Will, M},
-	title = {{Dolmetschorientierte Terminologiearbeit. Modell und Methode}},
-	publisher={Gunter Narr Verlag},
-	year = {2009}
-}
-
-@article{Will2015,
-	author = {Will, Martin},
-	journal = {Trans-Kom},
-	number = {1},
-	pages = {179--201},
-	title = {{Zur Eignung simultanfähiger Terminologiesysteme für das Konferenzdolmetschen}},
-	volume = {8},
-	year = {2015}
-}
-
-@phdthesis{Xu2015,
-	author = {Xu, Ran},
-	title = {Terminology Preparation for Simultaneous Interpreters},
-	school={University of Leeds},
-	year = {2015}
-}
-
 @article{Alessandrini1990,
 	author 		= {Alessandrini, M},
 	journal 	= {The Interpreters’ Newsletter},
@@ -296,7 +32,7 @@
   	year 		= {2016}
 }
 
-@incollection{incollection,
+@incollection{Costa2018,
   author       = {Costa, H., Corpas Pastor, G., & Durán-Muñoz, I. }, 
   title        = {Assessing Terminology Management Systems for Interpreters},
   booktitle    = {Trends in E-Tools and Resources for Translators and Interpreters},
@@ -323,6 +59,55 @@
 	title 		= {Design and Implementation of a Terminology and Knowledge Management Software for Conference Interpreter},
 	year 		= {2012}
 }
+
+
+@article{Fantinuoli2017a,
+	author 		= {Fantinuoli, C},
+	journal 	= {Translation & Interpreting},
+	number 		= {2},
+	pages 		= {24--37},
+	title 		= {{Computer-Assisted Preparation in Conference Interpreting}},
+	volume 		= {9},
+	year 		= {2017}
+}
+
+@inproceedings{Fantinuoli2017b,
+  	author       = {Fantinuoli, C},
+  	title        = {Speech Recognition in the Interpreter Workstation},
+  	date         = {2017},
+  	booktitle    = {Proceedings of the Translating and the Computer 39 Conference},
+  	location     = {London},
+  	pages        = {367--377},
+}
+
+@incollection{Fantinuoli2018,
+   	title 		= {Fantinuoli, C.},
+   	title		= {Computer-Assisted Interpreting: {C}hallenges and Future Perspectives},
+   	editor 		= {Corpas Pastor, G. and Durán-Muñoz, Isabel},
+   	booktitle 	= {Trends in E-Tools and Resources for Translators and Interpreters},
+   	publisher 	= {Brill},
+   	year 		= {2017},
+   	pages		= {153--174}
+}
+
+@book{Gile1995,
+	address 	= {Amsterdam},
+	author 		= {Gile, D.},
+	publisher 	= {Benjamins},
+	title 		= {Basic Concepts and Models for Interpreter and Translator Training},
+	year 		= {1995}
+}
+
+
+@article{Gile1999a,
+	author 		= {Gile, D},
+	journal 	= {Hermes},
+	pages 		= {153--172},
+	title 		= {Testing the Tight Rope Hypothesis in Simultaneous Interpreting – {{A}} Contribution},
+	volume 		= {23},
+	year 		= {1999}
+}
+
 
 @book{Gile2009,
 	address 	= {Amsterdam},
@@ -422,6 +207,17 @@
 	year 		= {2015}
 }
 
+
+@article{Seeber2011a,
+	author 		= {Seeber, K},
+	journal 	= {Interpreting},
+	number 		= {2},
+	pages 		= {176--204},
+	title 		= {Cognitive Load in Simultaneous Interpreting: {{{E}}}xisting Theories – New Models},
+	volume 		= {13},
+	year 		= {2011}
+}
+
  
 @incollection{Seeber2015,
 	author 		= {Seeber, K.},
@@ -451,12 +247,23 @@
 }
 
 
-@phdthesis{Timarová2012,
+@phdthesis{Timarova2012,
 	address 	= {Antwerp},
 	author 		= {Timarová, S.},
 	publisher 	= {KU Leuven},
 	title 		= {Working Memory in Simultaneous Interpreting},
 	year 		= {2012}
+}
+
+
+@article{Will2015,
+	author 		= {Will, M},
+	journal 	= {Zeitschrift Für Translationswissenschaft Und Fachkommunikation},
+	number 		= {1},
+	pages 		= {179--201},
+	title 		= {Zur Eignung Simultanfähiger Terminologiesysteme für das Konferenzdolmetschen},
+	volume 		= {8},
+	year 		= {2015}
 }
 
 
@@ -466,4 +273,237 @@
 	publisher 	= {Springer},
 	title 		= {Automatic Speech Recognition (Signals an)},
 	year 		= {2016}
+}
+
+
+@book{Barik1971,
+	author 		= {Barik, Henri C.},
+	title 		= {A description of various types of omissions, additions, and errors of translation encountered in simultaneous interpretation},
+	publisher 	= {Meta},
+	year		= {1971},
+}
+
+
+@article{Bartlomiejczyk2006,
+	journal 	= {Interpreting},
+	author 		= {Bartłomiejczyk, Magdalena},
+	number 		= {8},
+	volume 		= {2},
+	pages 		= {149– 174},
+	title 		= {Strategies of simultaneous interpreting and directionality},
+	year 		= {2006}
+}
+
+
+@masterthesis{Biagini2015,
+	address 	= {Glossario cartaceo e glossario elettronico durante l'interpretazione simultanea: {U}no studio comparativo},
+	author 		= {Biagini, Giulio},
+	school 		= {{U}niversità di {T}rieste},
+	address 	= {Trieste},
+	year 		= {2015}
+}
+
+
+@misc{Costa2016,
+	author 		= {Costa, H. and Pastor, G. C. and Durán Munoz, I.},
+	title 		= {An Interpreters’ Guide to Selecting Terminology Management Tools},
+	year 		= {2016}
+}
+
+
+@masterthesis{DeMerulis2013,
+	title 		= {L’uso di InterpretBank per la preparazione di una conferenza sul trattamento delle acque reflue: {L}ossario terminologico e contributo sperimentale},
+	author 		= {De Merulis, Gianpiero},
+	school 		= {{U}niversità di {B}ologna},
+	address 	= {Bologna},
+	year 		= {2013}
+}
+
+@masterthesis{Gacek2015,
+	author 		= {Gacek, Michael},
+	title 		= {{S}oftwarelösungen für {D}olmetscher{I}nnen},
+	school 		= {University of {V}ienna},
+	address 	= {Vienna},
+	year 		= {2015}
+}
+
+
+@article{Gile1988,
+	author 		= {Gile, Daniel},
+	journal 	= {The Interpreters' Newsletter},
+	pages 		= {4--22},
+	title 		= {{Le} partage de l'attention et le ‘modèle d'effort’ en interprétation simultanée},
+	volume 		= {1},
+	year 		= {1988}
+}
+
+@incollection{Gile1997,
+	author 		= {Gile, D.},
+	year 		= {1997},
+	title 		= {Conference interpreting as a cognitive management problem},
+	bookauthor 	= {Danks, Joseph H. and Shreve, Gregory M. and Fountain, Stephen B. and McBeath, Michael},
+	booktitle 	= {Cognitive Processes in Translation and Interpretation},
+	publisher 	= {Sage},
+	address 	= {London},
+	pages 		= {196--214}
+}
+
+@article{Gile1999b,
+	author 		= {Gile, Daniel},
+	title 		= {Testing the Effort Models’ tightrope hypothesis in simultaneous interpreting - {A} contribution},
+	journal 	= {Hermes Journal of Linguistics},
+	number 		= {23},
+	year 		= {1999}
+}
+
+
+@book{Kahneman1973,
+	author 		= {Kahneman, Daniel},
+	title 		= {Attention and Effort},
+	publisher 	= {Prentice-Hall}, 
+	address 	= {Englewood Cliffs, {NJ}},
+	year 		= {1973}
+}
+
+
+@article{Kantowitz1976,
+	author 		= {Kantowitz,B. H. and Knight, J. L},
+	journal 	= {Acta Psychologica},
+	pages 		= {343--362},
+	title 		= {Testing tapping timesharing: {A}uditory secondary task},
+	number 		= {1},
+	volume 		= {40},
+	year 		= {1976}
+}
+
+
+@masterthesis{Prandi2015a,
+	address 	= {Bologna},
+	author 		= {Prandi, Bianca},
+	school 		= {{U}niversità di {B}ologna},
+	title 		= {L'uso di {I}nterpret{B}ank nella didattica dell'interpretazione: {U}no studio esplorativo},
+	year 		= {2015}
+}
+
+@inproceedings{Prandi2015b,
+  title 		= {The use of {CAI} tools in interpreters’ training: {A} pilot Study},
+  author 		= {Prandi, Bianca},
+  booktitle 	= {Proceedings of the Translating and the Computer 37 Conference},
+  address 		= {London},
+  year 			= {2015}
+}
+
+
+@misc{Prandi2016,
+	author 		= {Prandi, Bianca},
+	title 		= {Analysis of the impact of {CAI} tools on simultaneous interpreting with a focus on cognitive processes and terminology consistency},
+	howpublished = {Poster presented at {TRA&CO} Symposium, {Johannes} Gutenberg University Mainz/Germersheim},	
+	address		= {Mainz/Germersheim},
+	year 		= {2016}
+}
+
+
+@misc{Prandi2017a,
+	author 		= {Prandi, Bianca},
+	title 		= {Investigating cognitive load in simultaneous interpreting with the support of terminology management tools},
+	howpublished = {Poster presented at 5th Polish Eye Tracking Conference Lublin},
+	address 	= {Lublin},
+	year 		= {2017}
+}
+
+
+@inproceedings{Prandi2017b,
+	author 		= {Prandi, B},
+	title 		= {Designing a Multimethod Study on the Use of {CA}I Tools during Simultaneous Interpreting},
+	booktitle	= {Proceedings of the Translating and the Computer 39 Conference},
+	address		= {London},
+	year 		= {2017}
+}
+
+
+@book{Rütten2007,
+	address 	= {Frankfurt am Main},
+	author 		= {Rütten, A.},
+	publisher 	= {Peter Lang},
+	title 		= {{I}nformations- und {W}issensmanagement im {K}onferenzdolmetschen},
+	year 		= {2007}
+}
+
+
+@book{Seeber2007,
+	author		= {Seeber, Kilian G.},
+	title		= {Thinking outside the cube: {M}odelling language processing tasks in a multiple resource paradigm},
+	publisher 	= {Interspeech},
+	address		= {Antwerp},
+	year 		= {2007},
+	pages		= {1382-1385}
+}
+
+@article{Seeber2011b,
+	author 		= {Seeber, Kilian G. and Dirk Kerzel},
+	journal 	= {Special issue of the International Journal of Bilingualism},
+	number 		= {2},
+	pages 		= {228--242},
+	title 		= {Cognitive load in simultaneous interpreting: {{M}}odel meets data},
+	volume 		= {16},
+	year 		= {2011}
+}
+
+
+@book{Wadensjö1998,
+	author 		= {Wadensjö, C},
+	title 		= {Interpreting as interaction},
+	publisher 	= {Longman},
+	address 	= {London / New York},
+	year 		= {1998}
+}
+
+
+@article{Wickens1976,
+	author 		= {Wickens,C. D},
+	journal 	= {Journal of Experimental Psychology: {H}uman Perception and Performance},
+	pages 		= {1--13},
+	title 		= {The effects of divided attention on information processing in tracking},
+	volume 		= {2},
+	year 		= {1976}
+}
+
+
+@incollection{Wockens1984,
+	author 		= {Wickens, Christopher D.},
+	year 		= {1984},
+	title		= {Processing resources in attention},
+	booktitle	= {Varieties of attention},
+	bookauthor	= {Parasuraman, Raja and Davies, David R.},
+	publisher 	= {Academic Press},
+	address		= {New York},
+	pages		= {63--102}
+}
+
+
+@article{Wickens2002,
+	author 		= {Wickens, Christopher D.},
+	year		= {2002},
+	title		= {Multiple resources and performance prediction},
+	journal 	= {Theoretical issues in ergonomics science},
+	volume		= {3},
+	number 		= {2},
+	pages 		= {159--177}
+}
+
+
+@book{Will2009,
+	author 		= {Will, M},
+	title 		= {Dolmetschorientierte {T}erminologiearbeit: {M}odell Und {M}ethode},
+	publisher 	= {Gunter Narr Verlag},
+	address		= {Tübingen},
+	year 		= {2009}
+}
+
+
+@phdthesis{Xu2015,
+	author 		= {Xu, Ran},
+	title 		= {Terminology Preparation for Simultaneous Interpreters},
+	school 		= {{U}niversity of {L}eeds},
+	year 		= {2015}
 }
