Fixed errors in bibliography

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -132,7 +132,7 @@
 	year		= {2010},
 	title		= {The Use of Pedagogical and Non-pedagogical ICT in Conference Interpreter Training},
 	booktitle	= {Teaching and Testing Interpreting and Translating},
-	editor 		= {Pellat, V. and Griffiths, K. and Shao-Chuan, W.}
+	editor 		= {Pellat, V. and Griffiths, K. and Shao-Chuan, W.},
 	publisher 	= {Peter Lang},
 	address		= {Bern},
 	pages 		= {229 -- 249}
