Fixed special characters in bibliography

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,7 +1,7 @@
 @misc{AIIC2000,
 	author 	= {AIIC},
 	title = {Code for the use of new technologies in conference interpretation},
-	note = {Retrieved on 31. October 2017 from \url{http://www.staff.uni-mainz.de/fantinuo/class/files/cai/aiic_code_interpreting%20technologies.pdf}},
+	note = {Retrieved on 31. October 2017 from \url{http://www.staff.uni-mainz.de/fantinuo/class/files/cai/aiic_code_interpreting\%20technologies.pdf}},
 	year = {2000}
 }
 
@@ -189,7 +189,7 @@
 	address 	= {Guildford},
 	author 		= {Braun, Sabine},
 	booktitle 	= {Videoconference and remote interpreting in criminal proceedings},
-	editor 		= {Braun, S. & Taylor, J.},
+	editor 		= {Braun, S. and Taylor, J.},
 	pages 		= {265--287},
 	publisher 	= {University of Surrey},
 	title 		= {Recommendations for the use of video-mediated interpreting in criminal proceedings},
@@ -332,7 +332,7 @@
 	address 	= {Bristol},
 	author 		= {Devaux, Jérôme},
 	booktitle 	= {Ideology, Ethics and Policy Development in Public Service Interpreting and Translation},
-	editor 		= {C. Valero Garcés & R. Tipton},
+	editor 		= {C. Valero Garcés and R. Tipton},
 	pages 		= {131--150},
 	publisher 	= {Multilingual Matters},
 	title 		= {Virtual presence, ethics and videoconference interpreting: {I}nsights from court settings},
@@ -374,7 +374,7 @@
 
 @article{Fantinuoli2017a,
 	author 		= {Fantinuoli, C},
-	journal 	= {Translation & Interpreting},
+	journal 	= {Translation \& Interpreting},
 	number 		= {2},
 	pages 		= {24--37},
 	title 		= {{Computer-Assisted Preparation in Conference Interpreting}},
@@ -448,7 +448,7 @@
 	author 		= {Fullwood, Chris and Judd, Amy  and  Finn, Mandy},
 	title 		= {The effect of initial meeting context and video-mediation on jury perceptions of an eyewitness},
 	journal 	= {Internet Journal of Criminology},
-	url = {Retrieved on 1 August, 2012, from http://www.internetjournalofcriminology.com/Fullwood,%20Judd%20&%20Finn%20-%20Video%20Mediation.pdf},
+	url = {Retrieved on 1 August, 2012, from http://www.internetjournalofcriminology.com/Fullwood,\%20Judd\%20&\%20Finn\%20-\%20Video\%20Mediation.pdf},
 	year = {2008}
 }
 
@@ -580,7 +580,7 @@
 }
 
 @misc{Hodges2008,
-	url = {Retrieved on 25 November, 2014, from http://www.ecba.org/content/index.php?option=com_content&view=article&id=533upcoming-edinburgh-scotland-spring-conference-sp-1153635615&catid=88&Itemid=127},
+	note = {Retrieved on 25 November, 2014, from \url{http://www.ecba.org/content/index.php?option=com_content&view=article&id=533upcoming-edinburgh-scotland-spring-conference-sp-1153635615&catid=88&Itemid=127}},
 	author = {Hodges, Louise},
 	title = {Towards a European e-Justice strategy},
 	year = {2008}
@@ -589,7 +589,7 @@
 @book{IoL2015,
 	title 		= {Diploma in Public Service Interpreting: {H}andbook for candidates},
 	author 		= {IoL Educational Trust},
-	note 		= {Retrieved on 18 October 2016 from \url{http://www.ciol.org.uk/sites/default/files/DPSI%20Handbook%20Oct-15.pdf}},
+	note 		= {Retrieved on 18 October 2016 from \url{http://www.ciol.org.uk/sites/default/files/DPSI\%20Handbook\%20Oct-15.pdf}},
 	year 		= {2015}
 }
 
@@ -635,7 +635,7 @@
 
 @article{Johnson2006,
 	author 		= {Johnson, Molly,  and  Wiggins, Elizabeth},
-	journal 	= {Law & Policy},
+	journal 	= {Law \& Policy},
 	number 		= {2},
 	pages 		= {211--227},
 	title 		= {Videoconferencing in criminal proceedings: {L}egal and empirical issues and directions for research},
@@ -674,7 +674,7 @@
 @book{Korak2010,
 	address 	= {Berlin},
 	author 		= {Korak, Christina.},
-	publisher 	= {Frank & Timme},
+	publisher 	= {Frank \& Timme},
 	title 		= {Remote interpreting via {S}kype: {A}nwendungsmöglichkeiten von {VoIP}-{S}oftware im {B}ereich {C}ommunity {I}nterpreting - {C}ommunicate everywhere?},
 	year 		= {2010}
 }
@@ -791,7 +791,7 @@
 
 @book{Llewellyn-Jones2011,
 	author 		= {Llewellyn-Jones, Peter  and  Lee, Robert},
-	note 		= {Retrieved on 29 December, 2016, from http://clok.uclan.ac.uk/5031/1/Lee%20and%20L-J%202011.pdf},
+	note 		= {Retrieved on 29 December, 2016, from http://clok.uclan.ac.uk/5031/1/Lee\%20and\%20L-J\%202011.pdf},
 	publisher 	= {Re-visiting role: {A}rguing for a multi-dimensional analysis of interpreter behaviour},
 	year 		= {2011}
 }
@@ -1003,7 +1003,7 @@
 	address 	= {Amsterdam},
 	author 		= {Niska, Helge},
 	booktitle 	= {Interpreting in the 21st century: {C}hallenges and Opportunities},
-	editor 		= {Viezzi, M. & Garzone, G.},
+	editor 		= {Viezzi, M. and Garzone, G.},
 	pages 		= {133--144},
 	publisher 	= {John Benjamins},
 	title 		= {Community interpreting training: {P}ast, present and future},
@@ -1080,7 +1080,7 @@
 @misc{Prandi2016,
 	author 		= {Prandi, Bianca},
 	title 		= {Analysis of the impact of {CAI} tools on simultaneous interpreting with a focus on cognitive processes and terminology consistency},
-	howpublished = {Poster presented at {TRA&CO} Symposium, {Johannes} Gutenberg University Mainz/Germersheim},	
+	howpublished = {Poster presented at {TRA\&CO} Symposium, {Johannes} Gutenberg University Mainz/Germersheim},	
 	address		= {Mainz/Germersheim},
 	year 		= {2016}
 }
@@ -1295,7 +1295,7 @@
 }
 
 @misc{Service2016,
-	author 		= {Her Majesty's Courts & Tribunals Service},
+	author 		= {Her Majesty's Courts \& Tribunals Service},
 	title 		= {Annual report and accounts 2015-16},
 	note 		= {Retrieved on 22 January, 2017, from \url{https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/536080/hm-courts-and-tribunals-service-annual-report-and-accounts-2015-16.pdf}},
 	year 		= {2016}
@@ -1377,7 +1377,7 @@
 
 @article{Verdier2011,
 	author 		= {Verdier, Maud and Licoppe, Christian},
-	journal 	= {International Journal of Law, Language & Discourse},
+	journal 	= {International Journal of Law, Language \& Discourse},
 	pages 		= {8--36},
 	title 		= {Videoconference in French courtrooms: {I}ts consequences on judicial settings},
 	volume 		= {1.3},
