Fixed URL access dates in local bibliography

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -111,7 +111,7 @@
 
 @misc{Bail2008,
 	author = {Bail for Immigration Detainees and the British Refugee Council},
-	note = {Retrieved on 15 April, 2012, from \url{http://www.refugeecouncil.org.uk/assets/0001/7078/RC_and_BID_report_on_Bail_hearings_and_video_links_Mar_08}},
+	note = {Retrieved on 15 April 2012 from \url{http://www.refugeecouncil.org.uk/assets/0001/7078/RC_and_BID_report_on_Bail_hearings_and_video_links_Mar_08}},
 	title = {A monitoring exercise by Bail for Immigration Detainees and the Refugee Council: {I}mmigration bail hearings by video link},
 	year = {2008}
 }
@@ -220,7 +220,7 @@
 
 @book{Braun2013,
 	author 		= {Braun, Sabine},
-	note 		= {Retrieved on 25 November, 2016, from \url{https://www.academia.edu/19593187/2013_AVIDICUS_2_final_research_report?auto=download}},
+	note 		= {Retrieved on 25 November 2016 from \url{https://www.academia.edu/19593187/2013_AVIDICUS_2_final_research_report?auto=download}},
 	title 		= {{AVIDICUS} 2 - Action 2 research report: {A}ssessment of video-mediated interpreting in the criminal justice system},
 	year 		= {2013}
 }
@@ -233,7 +233,7 @@
 	booktitle 	= {Routledge Handbook of Interpreting}, 
 	address 	= {London/New York},
 	publisher 	= {Routledge},
-	note 		= {\url{https://www.researchgate.net/publication/280305163_Remote_Interpreting} (31 October, 2017)}
+	note 		= {Retrieved 31 October 2017 from \url{https://www.researchgate.net/publication/280305163_Remote_Interpreting}}
 }
 
 @article{Braun2016a,
@@ -248,7 +248,7 @@
 
 @book{Braun2016b,
 	author 		= {Braun, Sabine and Davitti, Elena and Dicerto, Sara},
-	note 		= {Retrieved on 18 November, 2016, from http://www.videoconference-interpreting.net/wp-content/uploads/2016/11/AVIDICUS3_Research_Report.pdf},
+	note 		= {Retrieved on 18 November 2016 from \url{http://www.videoconference-interpreting.net/wp-content/uploads/2016/11/AVIDICUS3_Research_Report.pdf}},
 	title 		= {The use of videoconferencing in proceedings conducted with the assistance of an interpreter. {R}esearch report},
 	year 		= {2016}
 }
@@ -342,7 +342,7 @@
 @phdthesis{Devaux2017b,
 	address 	= {Technologies in Interpreter-Mediated Criminal Court hearings},
 	author 		= {Devaux, Jérôme},
-	note 		= {Retrieved on 01/05/2018 from https://open.academia.edu/JeromeDevaux},
+	note 		= {Retrieved on 01 Mai 2018 from \url{https://open.academia.edu/JeromeDevaux}},
 	school 		= {University of Salford},
 	address 	= {Salford},
 	title 		= {An Actor-Network Theory Account of the Interpreter's Role-Space},
@@ -425,7 +425,7 @@
 
 @phdthesis{Fowler2012,
 	author 		= {Fowler, Yvonne},
-	note 		= {Retrieved from http://eprints.aston.ac.uk/19442/1/Studentthesis-2013.pdf},
+	note 		= {Retrieved from \url{http://eprints.aston.ac.uk/19442/1/Studentthesis-2013.pdf}},
 	title 		= {A comparative study of face-to-face and prison video link interpreter-mediated hearings in England}, 
 	school 		= {Aston University},
 	address 	= {Birmingham},
@@ -580,7 +580,7 @@
 }
 
 @misc{Hodges2008,
-	note = {Retrieved on 25 November, 2014, from \url{http://www.ecba.org/content/index.php?option=com_content&view=article&id=533upcoming-edinburgh-scotland-spring-conference-sp-1153635615&catid=88&Itemid=127}},
+	note = {Retrieved on 25 November 2014 from \url{http://www.ecba.org/content/index.php?option=com_content&view=article&id=533upcoming-edinburgh-scotland-spring-conference-sp-1153635615&catid=88&Itemid=127}},
 	author = {Hodges, Louise},
 	title = {Towards a European e-Justice strategy},
 	year = {2008}
@@ -755,7 +755,7 @@
 @article{Licoppe2013,
 	title 		= {Courtoom interaction as a multimedia event: {T}he work of producing relevant videoconference frames in French pre-trial hearings},
 	author 		= {Licoppe, Christian and Verdier, Maud and  Dumoulin, Laurence},
-	note 		= {Retrieved on 20 November, 2016, from \url{http://www.cios.org/EJCPUBLIC/023/1/023125.HTML}},
+	note 		= {Retrieved on 20 November 2016 from \url{http://www.cios.org/EJCPUBLIC/023/1/023125.HTML}},
 	journal 	= {The Electronic Journal of Communication},
 	volume		= {23},
 	year 		= {2013}
@@ -791,7 +791,7 @@
 
 @book{Llewellyn-Jones2011,
 	author 		= {Llewellyn-Jones, Peter  and  Lee, Robert},
-	note 		= {Retrieved on 29 December, 2016, from http://clok.uclan.ac.uk/5031/1/Lee\%20and\%20L-J\%202011.pdf},
+	note 		= {Retrieved on 29 December 2016 from http://clok.uclan.ac.uk/5031/1/Lee\%20and\%20L-J\%202011.pdf},
 	publisher 	= {Re-visiting role: {A}rguing for a multi-dimensional analysis of interpreter behaviour},
 	year 		= {2011}
 }
@@ -943,7 +943,7 @@
 
 @misc{Moorad2017,
 	title 		= {Staff complement of Interpreting Unit},
-	howpublished= {e-mail to E. Deysel [Online], [20 January 2017]},
+	howpublished= {e-mail to E. Deysel \[Online, 20 January 2017\]},
 	author 		= {Moorad, I.},
 	publisher 	= {edeysel\@parliament.gov.za},
 	year 		= {2017}
@@ -1050,14 +1050,14 @@
 @misc{Plotnikoff1999,
 	title 		= {Preliminary hearings: {V}ideo links evaluation of pilot projects},
 	author 		= {Plotnikoff, Joyce,  and  Woolfson, Richard},
-	note 		= {Retrieved on 12 November, 2016, from \url{http://lexiconlimited.co.uk/wp-content/uploads/2013/01/Videolink-magistrates.pdf}},
+	note 		= {Retrieved on 12 November 2016 from \url{http://lexiconlimited.co.uk/wp-content/uploads/2013/01/Videolink-magistrates.pdf}},
 	year 		= {1999}
 }
 
 @misc{Plotnikoff2000,
 	title 		= {Evaluation of video link pilot project at Manchester Crown Court: {F}inal Report},
 	author 		= {Plotnikoff, Joyce,  and  Woolfson, Richard},
-	note		= {Retrieved on 12 November, 2016, from \url{http://lexiconlimited.co.uk/wp-content/uploads/2013/01/Videolink-Crown.pdf}},
+	note		= {Retrieved on 12 November 2016 from \url{http://lexiconlimited.co.uk/wp-content/uploads/2013/01/Videolink-Crown.pdf}},
 	year 		= {2000}
 }
 
@@ -1297,7 +1297,7 @@
 @misc{Service2016,
 	author 		= {Her Majesty's Courts \& Tribunals Service},
 	title 		= {Annual report and accounts 2015-16},
-	note 		= {Retrieved on 22 January, 2017, from \url{https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/536080/hm-courts-and-tribunals-service-annual-report-and-accounts-2015-16.pdf}},
+	note 		= {Retrieved on 22 January 2017 from \url{https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/536080/hm-courts-and-tribunals-service-annual-report-and-accounts-2015-16.pdf}},
 	year 		= {2016}
 }
 
@@ -1327,8 +1327,7 @@
 
 @misc{TechTarget2017,
 	author 		= {TechTarget Network},
-	howpublished= {\url{http://searchunifiedcommunications.techtarget.com/definitions/page/7}},
-	note 		= {[Online; accessed 31 October, 2017]},
+	note = {Retrieved on 31 October 2017 from \url{http://searchunifiedcommunications.techtarget.com/definitions/page/7}},
 	year 		= {2017}
 }
 
@@ -1336,7 +1335,7 @@
 	author 		= {International Telecommunication Union},
 	year 		= {2009},
 	title 		= {Series H: {A}udiovisual and multimedia systems - {I}nfrastructure of audiovisual services},
-	note 		= {Retrieved on 18 October 2016, from \url{https://www.itu.int/rec/T-REC-H.323-200912-I/en}}
+	note 		= {Retrieved on 18 October 2016 from \url{https://www.itu.int/rec/T-REC-H.323-200912-I/en}}
 }
 
 @article{Thaxton1993,
