Fixed citations in chapter 5

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,8 +1,8 @@
 @misc{AIIC2000,
-	author 	= {AIIC},
-	title = {Code for the use of new technologies in conference interpretation},
-	note = {Retrieved on 31. October 2017 from \url{http://www.staff.uni-mainz.de/fantinuo/class/files/cai/aiic_code_interpreting\%20technologies.pdf}},
-	year = {2000}
+	author 	    = {AIIC},
+	title       = {Code for the use of new technologies in conference interpretation},
+	note        = {Retrieved on 31. October 2017 from \url{http://www.staff.uni-mainz.de/fantinuo/class/files/cai/aiic_code_interpreting\%20technologies.pdf}},
+	year        = {2000}
 }
 
 @article{Alessandrini1990,
@@ -27,7 +27,7 @@
 @article{Angelelli2000,
 	author 		= {Angelelli, C},
 	journal 	= {Meta},
-	doi 		= {10.7202/001891ar (15 May, 2018)},
+	doi 		= {10.7202/001891ar},
 	number 		= {4},
 	pages 		= {580–592},
 	title 		= {Interpretation as a Communicative Event: {A} Look through Hymes' Lenses},
@@ -54,21 +54,21 @@
 }
 
 @misc{AVIDICUS1,
-	title 	= {{AVIDICUS} Project 1},
-	year  	= {2008-2011},
-	note 	= {Retrieved on 12 May 2018 from \url{http://wp.videoconference-interpreting.net/?page_id=13}}
+	title 	    = {{AVIDICUS} Project 1},
+	year  	    = {2008-2011},
+	note 	    = {Retrieved on 12 May 2018 from \url{http://wp.videoconference-interpreting.net/?page_id=13}}
 }
 
 @misc{AVIDICUS2,
-	title 	= {{AVIDICUS} Project 2},
-	year  	= {2011-2013},
-	note 	= {Retrieved on 12 May 2018 from \url{http://wp.videoconference-interpreting.net/?page_id=13}}
+	title 	    = {{AVIDICUS} Project 2},
+	year  	    = {2011-2013},
+	note 	    = {Retrieved on 12 May 2018 from \url{http://wp.videoconference-interpreting.net/?page_id=13}}
 }
 
 @misc{AVIDICUS3,
-	title 	= {{AVIDICUS} Project 3},
-	year  	= {2014-2016},
-	note 	= {Retrieved on 12 May 2018 from \url{http://wp.videoconference-interpreting.net/?page_id=154}}
+	title 	    = {{AVIDICUS} Project 3},
+	year  	    = {2014-2016},
+	note 	    = {Retrieved on 12 May 2018 from \url{http://wp.videoconference-interpreting.net/?page_id=154}}
 }
 
 @incollection{Balogh2011,
@@ -110,10 +110,10 @@
 }
 
 @misc{Bail2008,
-	author = {Bail for Immigration Detainees and the British Refugee Council},
-	note = {Retrieved on 15 April 2012 from \url{http://www.refugeecouncil.org.uk/assets/0001/7078/RC_and_BID_report_on_Bail_hearings_and_video_links_Mar_08}},
-	title = {A monitoring exercise by Bail for Immigration Detainees and the Refugee Council: {I}mmigration bail hearings by video link},
-	year = {2008}
+	author      = {Bail for Immigration Detainees and the British Refugee Council},
+	note        = {Retrieved on 15 April 2012 from \url{http://www.refugeecouncil.org.uk/assets/0001/7078/RC_and_BID_report_on_Bail_hearings_and_video_links_Mar_08}},
+	title       = {A monitoring exercise by Bail for Immigration Detainees and the Refugee Council: {I}mmigration bail hearings by video link},
+	year        = {2008}
 }
 
 @incollection{Blaauw2008,
@@ -350,10 +350,10 @@
 }
 
 @misc{Ellis2004,
-	author = {Ellis, Ronald},
-	title = {Videoconferencing in refugee hearings},
-	url = {Retrieved on 17 December, 2016, from http://www.irb-cisr.gc.ca/Eng/transp/ReviewEval/Pages/Video.aspx#author},
-	year = {2004}
+	author      = {Ellis, Ronald},
+	title       = {Videoconferencing in refugee hearings},
+	url         = {Retrieved on 17 December, 2016, from http://www.irb-cisr.gc.ca/Eng/transp/ReviewEval/Pages/Video.aspx#author},
+	year        = {2004}
 }
 
 @misc{Europarl2001,
@@ -525,7 +525,7 @@
 	author 		= {Gigliobianco, Sebastiano},
 	title 		= {{D}igitalisierung von {A}rbeitsplätzen von {K}onferenzdolmetschern: {S}kizzierung eines modellhaften {A}ufbaus eines zukunftsfähigen {A}rbeitsplatzes von {K}onferenzdolmetschern unter {B}erücksichtigung aktueller technologischer {E}ntwicklungen anhand eines {V}ersuchs mit praktizierenden {P}robanden},
 	institute	= {{S}prachen und {D}olmetscher {I}nstitut {M}ünchen},
-	year = {2017}
+	year        = {2017}
 }
 
 @article{Goldsmith2017,
@@ -580,10 +580,10 @@
 }
 
 @misc{Hodges2008,
-	note = {Retrieved on 25 November 2014 from \url{http://www.ecba.org/content/index.php?option=com_content&view=article&id=533upcoming-edinburgh-scotland-spring-conference-sp-1153635615&catid=88&Itemid=127}},
-	author = {Hodges, Louise},
-	title = {Towards a European e-Justice strategy},
-	year = {2008}
+	note        = {Retrieved on 25 November 2014 from \url{http://www.ecba.org/content/index.php?option=com_content&view=article&id=533upcoming-edinburgh-scotland-spring-conference-sp-1153635615&catid=88&Itemid=127}},
+	author      = {Hodges, Louise},
+	title       = {Towards a European e-Justice strategy},
+	year        = {2008}
 }
 
 @book{IoL2015,
@@ -807,11 +807,11 @@
 }
 
 @book{Llewellyn-Jones2014,
-	title = {Redefining the role of the community interpreter : {T}he concept of role-space},
-	author = {Llewellyn-Jones, Peter,  and  Lee, Robert},
-	publisher = {SLI Press},
-	address = {Carlton-le-Moorland, Lincoln, United Kingdom},
-	year = {2014}
+	title       = {Redefining the role of the community interpreter : {T}he concept of role-space},
+	author      = {Llewellyn-Jones, Peter,  and  Lee, Robert},
+	publisher   = {SLI Press},
+	address     = {Carlton-le-Moorland, Lincoln, United Kingdom},
+	year        = {2014}
 }
 
 @incollection{Luisetto2016,
@@ -1320,14 +1320,14 @@
 }
 
 @misc{Technical2016,
-	author = {Technical Compliance Team, DG Interpretation, European Commission},
-	title = {Internal archives of the {European} Union.},
-	year = {2016}
+	author      = {Technical Compliance Team, DG Interpretation, European Commission},
+	title       = {Internal archives of the {European} Union.},
+	year        = {2016}
 }
 
 @misc{TechTarget2017,
 	author 		= {TechTarget Network},
-	note = {Retrieved on 31 October 2017 from \url{http://searchunifiedcommunications.techtarget.com/definitions/page/7}},
+	note        = {Retrieved on 31 October 2017 from \url{http://searchunifiedcommunications.techtarget.com/definitions/page/7}},
 	year 		= {2017}
 }
 
