Updates from ShareLaTeX

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -496,20 +496,12 @@
 	pages 		= {196--214}
 }
 
-@article{Gile1999a,
+@article{Gile1999,
 	author 		= {Gile, D},
 	journal 	= {Hermes},
 	pages 		= {153--172},
 	title 		= {Testing the Tight Rope Hypothesis in Simultaneous Interpreting – {{A}} Contribution},
 	volume 		= {23},
-	year 		= {1999}
-}
-
-@article{Gile1999b,
-	author 		= {Gile, Daniel},
-	title 		= {Testing the Effort Models’ tightrope hypothesis in simultaneous interpreting - {A} contribution},
-	journal 	= {Hermes Journal of Linguistics},
-	number 		= {23},
 	year 		= {1999}
 }
 
@@ -943,7 +935,7 @@
 
 @misc{Moorad2017,
 	title 		= {Staff complement of Interpreting Unit},
-	howpublished= {e-mail to E. Deysel \[Online, 20 January 2017\]},
+	howpublished= {e-mail to E. Deysel, Online, 20 January 2017},
 	author 		= {Moorad, I.},
 	publisher 	= {edeysel\@parliament.gov.za},
 	year 		= {2017}
@@ -1321,7 +1313,7 @@
 
 @misc{Technical2016,
 	author      = {Technical Compliance Team, DG Interpretation, European Commission},
-	title       = {Internal archives of the {European} Union.},
+	title       = {Internal archives of the {European} Union},
 	year        = {2016}
 }
 
