--- a/localpackages.tex
+++ b/localpackages.tex
@@ -24,9 +24,10 @@
 %compatibility of pgfplots and forest, see http://tex.stackexchange.com/a/330076
 \makeatletter
 \let\pgfmathModX=\pgfmathMod@
-\usepackage{pgfplots}%
+\usepackage{pgfplots,pgfplotstable}%
 \let\pgfmathMod@=\pgfmathModX
 \makeatother
+\usepgfplotslibrary{colorbrewer,groupplots}
 
 \usepackage{siunitx}
 \sisetup{output-decimal-marker={.},detect-weight=true, detect-family=true, detect-all, input-symbols={\%}, free-standing-units, input-open-uncertainty= , input-close-uncertainty= ,table-align-text-pre=false,uncertainty-separator={\,},group-digits=false,detect-inline-weight=math}
