--- a/localpackages.tex
+++ b/localpackages.tex
@@ -20,7 +20,8 @@
 
 \usepackage{hhline}
 \usepackage{tabularx}
-
+\usepackage[linguistics]{forest}
+\usetikzlibrary{arrows,arrows.meta}
 %compatibility of pgfplots and forest, see http://tex.stackexchange.com/a/330076
 \makeatletter
 \let\pgfmathModX=\pgfmathMod@
