--- a/main.tex
+++ b/main.tex
@@ -65,8 +65,8 @@
  \includepaper{chapters/01} 
  \includepaper{chapters/02} 
  \includepaper{chapters/03} 
- %\includepaper{chapters/04}
- %\includepaper{chapters/05} 
+ \includepaper{chapters/04}
+ \includepaper{chapters/05} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%                                              %%%
