Updates from ShareLaTeX

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -392,12 +392,12 @@
 }
 
 @incollection{Fantinuoli2018,
-   	title 		= {Fantinuoli, C.},
+   	author 		= {Fantinuoli, C.},
    	title		= {Computer-Assisted Interpreting: {C}hallenges and Future Perspectives},
    	editor 		= {Corpas Pastor, G. and Durán-Muñoz, Isabel},
    	booktitle 	= {Trends in E-Tools and Resources for Translators and Interpreters},
    	publisher 	= {Brill},
-   	year 		= {2017},
+   	year 		= {2018},
    	pages		= {153--174}
 }
 
