Updates from ShareLaTeX

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -272,17 +272,17 @@
 }
 
 @book{Chernov2004,
-	address 	= {Amsterdam / Philadelphia},
+	address 	= {Amsterdam/Philadelphia},
 	author 		= {Chernov, Ghelly V.},
 	publisher 	= {John Benjamin},
 	title 		= {Interference and Anticipation in Simultaneous Interpreting: {A} probability-prediction model},
 	year 		= {2004}
 }
 
-@book{Collard2017,
+@unpublished{Collard2017,
   	author      = {Collard, C. and Defrancq, B.},
-  	location    = {Geneva},
   	title       = {Sex Differences in Simultaneous Interpreting: {A} Corpus-Based Study},
+  	addendum = {Poster presented at the CIUTI Forum 2017, Geneva},
   	year        = {2017},
 }
 
@@ -296,7 +296,7 @@
 }
 
 @misc{Costa2016,
-	author 		= {Costa, H. and Pastor, G. C. and Durán Munoz, I.},
+	author 		= {Costa, H. and Corpas Pastor, G. and Durán-Muñoz, I.},
 	title 		= {An Interpreters’ Guide to Selecting Terminology Management Tools},
 	year 		= {2016}
 }
@@ -394,11 +394,12 @@
 @incollection{Fantinuoli2018,
    	author 		= {Fantinuoli, C.},
    	title		= {Computer-Assisted Interpreting: {C}hallenges and Future Perspectives},
-   	editor 		= {Corpas Pastor, G. and Durán-Muñoz, Isabel},
+   	editor 		= {Corpas Pastor, G. and Durán-Muñoz, I.},
    	booktitle 	= {Trends in E-Tools and Resources for Translators and Interpreters},
    	publisher 	= {Brill},
    	year 		= {2018},
-   	pages		= {153--174}
+   	pages		= {153--174},
+   	 address      = {Leiden},
 }
 
 @incollection{Feinauer2005,
@@ -469,7 +470,7 @@
 }
 
 @article{Gile1988,
-	author 		= {Gile, Daniel},
+	author 		= {Gile, D.},
 	journal 	= {The Interpreters' Newsletter},
 	pages 		= {4--22},
 	title 		= {{Le} partage de l'attention et le ‘modèle d'effort’ en interprétation simultanée},
@@ -506,8 +507,8 @@
 }
 
 @book{Gile2009,
-	address 	= {Amsterdam / Philadelphia},
-	author 		= {Gile, Daniel},
+	address 	= {Amsterdam/Philadelphia},
+	author 		= {Gile, D.},
 	publisher 	= {John Benjamins},
 	title 		= {Basic Concepts and Models for Interpreter and Translator Training},
 	year 		= {2009}
@@ -561,7 +562,7 @@
 }
 
 @incollection{Hale2008,
-	address 	= {Amsterdam / Philadelphia},
+	address 	= {Amsterdam/Philadelphia},
 	author 		= {Hale, Sandra},
 	booktitle 	= {Crossing Borders in Community Interpreting – definitions and dilemmas},
 	editor 		= {Valero Garcés, C. and Martin, A.},
